test/logs.txt
In file included from ../map_tests/count().cpp:1:
In file included from ../map_tests/../system/system_methods.ipp:2:
In file included from ../map_tests/../system/lib.hpp:28:
In file included from ../map_tests/../system/../../config.hpp:3:
../map_tests/../../../map.tpp:106:25: error: type 'ft::map<int, int, std::__1::less<int>, std::__1::allocator<ft::pair<const int, int> > >::_base' (aka 'RedBlackTree<int, nodeSet<int> >') is not a direct or virtual base of 'ft::map<int, int, std::__1::less<int>, std::__1::allocator<ft::pair<const int, int> > >'
        map() : base(), _base(){
                        ^~~~~
../map_tests/__service.ipp:38:2: note: in instantiation of member function 'ft::map<int, int, std::__1::less<int>, std::__1::allocator<ft::pair<const int, int> > >::map' requested here
        MapBoolTest() {
        ^
In file included from ../map_tests/count().cpp:1:
In file included from ../map_tests/../system/system_methods.ipp:2:
In file included from ../map_tests/../system/lib.hpp:28:
In file included from ../map_tests/../system/../../config.hpp:3:
../map_tests/../../../map.tpp:108:18: error: cannot initialize a variable of type 'int *' with an rvalue of type 'std::__1::allocator<ft::pair<const int, int> >::pointer' (aka 'ft::pair<const int, int> *')
            Key* build = this->_alloc.allocate(1);
                 ^       ~~~~~~~~~~~~~~~~~~~~~~~~
../map_tests/../../../map.tpp:35:9: error: constructor for 'ft::mapbase<int, int, std::__1::less<int>, std::__1::allocator<ft::pair<const int, int> > >' must explicitly initialize the member '_comp' which does not have a default constructor
        mapbase() {};
        ^
../map_tests/../../../map.tpp:106:17: note: in instantiation of member function 'ft::mapbase<int, int, std::__1::less<int>, std::__1::allocator<ft::pair<const int, int> > >::mapbase' requested here
        map() : base(), _base(){
                ^
../map_tests/__service.ipp:38:2: note: in instantiation of member function 'ft::map<int, int, std::__1::less<int>, std::__1::allocator<ft::pair<const int, int> > >::map' requested here
        MapBoolTest() {
        ^
../map_tests/../../../map.tpp:58:23: note: member is declared here
        value_compare _comp;
                      ^
../map_tests/../../../map.tpp:41:15: note: 'ft::mapbase<int, int, std::__1::less<int>, std::__1::allocator<ft::pair<const int, int> > >::value_compare' declared here
        class value_compare : public std::binary_function<ft::pair<const Key, T>, ft::pair<const Key, T>, bool>{
              ^
In file included from ../map_tests/count().cpp:1:
In file included from ../map_tests/../system/system_methods.ipp:2:
In file included from ../map_tests/../system/lib.hpp:28:
In file included from ../map_tests/../system/../../config.hpp:3:
In file included from ../map_tests/../../../map.tpp:16:
../map_tests/../system/../../../red_black_tree.tpp:149:18: error: cannot initialize a variable of type 'int *' with an lvalue of type 'ft::pair<const int, int> *'
            Key* save = node->_Key;
                 ^      ~~~~~~~~~~
../map_tests/../system/../../../red_black_tree.tpp:68:38: note: in instantiation of member function 'ft::RedBlackTree<int, ft::nodeSet<ft::pair<const int, int> > >::delete_node' requested here
        ~RedBlackTree() { __INFOMF__ delete_node(_nul);  };
                                     ^
../map_tests/../../../map.tpp:106:9: note: in instantiation of member function 'ft::RedBlackTree<int, ft::nodeSet<ft::pair<const int, int> > >::~RedBlackTree' requested here
        map() : base(), _base(){
        ^
../map_tests/__service.ipp:38:2: note: in instantiation of member function 'ft::map<int, int, std::__1::less<int>, std::__1::allocator<ft::pair<const int, int> > >::map' requested here
        MapBoolTest() {
        ^
In file included from ../map_tests/count().cpp:1:
In file included from ../map_tests/../system/system_methods.ipp:2:
In file included from ../map_tests/../system/lib.hpp:28:
In file included from ../map_tests/../system/../../config.hpp:3:
In file included from ../map_tests/../../../map.tpp:16:
../map_tests/../system/../../../red_black_tree.tpp:78:26: error: assigning to 'ft::pair<const int, int> *' from incompatible type 'int *'
            _nul->_Key = value;
                         ^~~~~
../map_tests/../../../map.tpp:110:19: note: in instantiation of member function 'ft::RedBlackTree<int, ft::nodeSet<ft::pair<const int, int> > >::init' requested here
            this->init(build);
                  ^
../map_tests/__service.ipp:38:2: note: in instantiation of member function 'ft::map<int, int, std::__1::less<int>, std::__1::allocator<ft::pair<const int, int> > >::map' requested here
        MapBoolTest() {
        ^
In file included from ../map_tests/count().cpp:1:
In file included from ../map_tests/../system/system_methods.ipp:2:
In file included from ../map_tests/../system/lib.hpp:28:
In file included from ../map_tests/../system/../../config.hpp:3:
../map_tests/../../../map.tpp:106:25: error: type 'ft::map<std::__1::basic_string<char>, std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<ft::pair<const std::__1::basic_string<char>, std::__1::basic_string<char> > > >::_base' (aka 'RedBlackTree<std::__1::basic_string<char>, nodeSet<std::__1::basic_string<char> > >') is not a direct or virtual base of 'ft::map<std::__1::basic_string<char>, std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<ft::pair<const std::__1::basic_string<char>, std::__1::basic_string<char> > > >'
        map() : base(), _base(){
                        ^~~~~
../map_tests/__service.ipp:38:2: note: in instantiation of member function 'ft::map<std::__1::basic_string<char>, std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<ft::pair<const std::__1::basic_string<char>, std::__1::basic_string<char> > > >::map' requested here
        MapBoolTest() {
        ^
In file included from ../map_tests/count().cpp:1:
In file included from ../map_tests/../system/system_methods.ipp:2:
In file included from ../map_tests/../system/lib.hpp:28:
In file included from ../map_tests/../system/../../config.hpp:3:
../map_tests/../../../map.tpp:108:18: error: cannot initialize a variable of type 'std::__1::basic_string<char> *' with an rvalue of type 'std::__1::allocator<ft::pair<const std::__1::basic_string<char>, std::__1::basic_string<char> > >::pointer' (aka 'ft::pair<const std::__1::basic_string<char>, std::__1::basic_string<char> > *')
            Key* build = this->_alloc.allocate(1);
                 ^       ~~~~~~~~~~~~~~~~~~~~~~~~
../map_tests/../../../map.tpp:35:9: error: constructor for 'ft::mapbase<std::__1::basic_string<char>, std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<ft::pair<const std::__1::basic_string<char>, std::__1::basic_string<char> > > >' must explicitly initialize the member '_comp' which does not have a default constructor
        mapbase() {};
        ^
../map_tests/../../../map.tpp:106:17: note: in instantiation of member function 'ft::mapbase<std::__1::basic_string<char>, std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<ft::pair<const std::__1::basic_string<char>, std::__1::basic_string<char> > > >::mapbase' requested here
        map() : base(), _base(){
                ^
../map_tests/__service.ipp:38:2: note: in instantiation of member function 'ft::map<std::__1::basic_string<char>, std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<ft::pair<const std::__1::basic_string<char>, std::__1::basic_string<char> > > >::map' requested here
        MapBoolTest() {
        ^
../map_tests/../../../map.tpp:58:23: note: member is declared here
        value_compare _comp;
                      ^
../map_tests/../../../map.tpp:41:15: note: 'ft::mapbase<std::__1::basic_string<char>, std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<ft::pair<const std::__1::basic_string<char>, std::__1::basic_string<char> > > >::value_compare' declared here
        class value_compare : public std::binary_function<ft::pair<const Key, T>, ft::pair<const Key, T>, bool>{
              ^
In file included from ../map_tests/count().cpp:1:
In file included from ../map_tests/../system/system_methods.ipp:2:
In file included from ../map_tests/../system/lib.hpp:28:
In file included from ../map_tests/../system/../../config.hpp:3:
In file included from ../map_tests/../../../map.tpp:16:
../map_tests/../system/../../../red_black_tree.tpp:149:18: error: cannot initialize a variable of type 'std::__1::basic_string<char> *' with an lvalue of type 'ft::pair<const std::__1::basic_string<char>, std::__1::basic_string<char> > *'
            Key* save = node->_Key;
                 ^      ~~~~~~~~~~
../map_tests/../system/../../../red_black_tree.tpp:68:38: note: in instantiation of member function 'ft::RedBlackTree<std::__1::basic_string<char>, ft::nodeSet<ft::pair<const std::__1::basic_string<char>, std::__1::basic_string<char> > > >::delete_node' requested here
        ~RedBlackTree() { __INFOMF__ delete_node(_nul);  };
                                     ^
../map_tests/../../../map.tpp:106:9: note: in instantiation of member function 'ft::RedBlackTree<std::__1::basic_string<char>, ft::nodeSet<ft::pair<const std::__1::basic_string<char>, std::__1::basic_string<char> > > >::~RedBlackTree' requested here
        map() : base(), _base(){
        ^
../map_tests/__service.ipp:38:2: note: in instantiation of member function 'ft::map<std::__1::basic_string<char>, std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<ft::pair<const std::__1::basic_string<char>, std::__1::basic_string<char> > > >::map' requested here
        MapBoolTest() {
        ^
In file included from ../map_tests/count().cpp:1:
In file included from ../map_tests/../system/system_methods.ipp:2:
In file included from ../map_tests/../system/lib.hpp:28:
In file included from ../map_tests/../system/../../config.hpp:3:
In file included from ../map_tests/../../../map.tpp:16:
../map_tests/../system/../../../red_black_tree.tpp:78:26: error: assigning to 'ft::pair<const std::__1::basic_string<char>, std::__1::basic_string<char> > *' from incompatible type 'std::__1::basic_string<char> *'
            _nul->_Key = value;
                         ^~~~~
../map_tests/../../../map.tpp:110:19: note: in instantiation of member function 'ft::RedBlackTree<std::__1::basic_string<char>, ft::nodeSet<ft::pair<const std::__1::basic_string<char>, std::__1::basic_string<char> > > >::init' requested here
            this->init(build);
                  ^
../map_tests/__service.ipp:38:2: note: in instantiation of member function 'ft::map<std::__1::basic_string<char>, std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<ft::pair<const std::__1::basic_string<char>, std::__1::basic_string<char> > > >::map' requested here
        MapBoolTest() {
        ^
In file included from ../map_tests/count().cpp:1:
In file included from ../map_tests/../system/system_methods.ipp:2:
In file included from ../map_tests/../system/lib.hpp:28:
In file included from ../map_tests/../system/../../config.hpp:3:
../map_tests/../../../map.tpp:233:24: error: cannot initialize a parameter of type 'ft::map<int, int, std::__1::less<int>, std::__1::allocator<ft::pair<const int, int> > >::_node *' (aka 'nodeSet<int> *') with an lvalue of type 'ft::nodeSet<ft::pair<const int, int> > *'
            clear_tree(this->_root);
                       ^~~~~~~~~~~
../map_tests/../../../map.tpp:141:13: note: in instantiation of member function 'ft::map<int, int, std::__1::less<int>, std::__1::allocator<ft::pair<const int, int> > >::clear' requested here
            clear();
            ^
../map_tests/__service.ipp:38:2: note: in instantiation of member function 'ft::map<int, int, std::__1::less<int>, std::__1::allocator<ft::pair<const int, int> > >::~map' requested here
        MapBoolTest() {
        ^
../map_tests/../../../map.tpp:444:32: note: passing argument to parameter 'node' here
        void clear_tree(_node* node) {
                               ^
../map_tests/../../../map.tpp:445:30: error: cannot initialize a parameter of type 'ft::nodeSet<ft::pair<const int, int> > *' with an lvalue of type 'ft::map<int, int, std::__1::less<int>, std::__1::allocator<ft::pair<const int, int> > >::_node *' (aka 'nodeSet<int> *')
            if (!this->isNul(node)) {
                             ^~~~
../map_tests/../../../map.tpp:233:13: note: in instantiation of member function 'ft::map<int, int, std::__1::less<int>, std::__1::allocator<ft::pair<const int, int> > >::clear_tree' requested here
            clear_tree(this->_root);
            ^
../map_tests/../../../map.tpp:141:13: note: in instantiation of member function 'ft::map<int, int, std::__1::less<int>, std::__1::allocator<ft::pair<const int, int> > >::clear' requested here
            clear();
            ^
../map_tests/__service.ipp:38:2: note: in instantiation of member function 'ft::map<int, int, std::__1::less<int>, std::__1::allocator<ft::pair<const int, int> > >::~map' requested here
        MapBoolTest() {
        ^
../map_tests/../system/../../../red_black_tree.tpp:81:26: note: passing argument to parameter 'node' here
        bool isNul(Node* node) const {
                         ^
In file included from ../map_tests/count().cpp:1:
In file included from ../map_tests/../system/system_methods.ipp:2:
In file included from ../map_tests/../system/lib.hpp:28:
In file included from ../map_tests/../system/../../config.hpp:3:
../map_tests/../../../map.tpp:233:24: error: cannot initialize a parameter of type 'ft::map<std::__1::basic_string<char>, std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<ft::pair<const std::__1::basic_string<char>, std::__1::basic_string<char> > > >::_node *' (aka 'nodeSet<std::__1::basic_string<char> > *') with an lvalue of type 'ft::nodeSet<ft::pair<const std::__1::basic_string<char>, std::__1::basic_string<char> > > *'
            clear_tree(this->_root);
                       ^~~~~~~~~~~
../map_tests/../../../map.tpp:141:13: note: in instantiation of member function 'ft::map<std::__1::basic_string<char>, std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<ft::pair<const std::__1::basic_string<char>, std::__1::basic_string<char> > > >::clear' requested here
            clear();
            ^
../map_tests/__service.ipp:38:2: note: in instantiation of member function 'ft::map<std::__1::basic_string<char>, std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<ft::pair<const std::__1::basic_string<char>, std::__1::basic_string<char> > > >::~map' requested here
        MapBoolTest() {
        ^
../map_tests/../../../map.tpp:444:32: note: passing argument to parameter 'node' here
        void clear_tree(_node* node) {
                               ^
../map_tests/../../../map.tpp:445:30: error: cannot initialize a parameter of type 'ft::nodeSet<ft::pair<const std::__1::basic_string<char>, std::__1::basic_string<char> > > *' with an lvalue of type 'ft::map<std::__1::basic_string<char>, std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<ft::pair<const std::__1::basic_string<char>, std::__1::basic_string<char> > > >::_node *' (aka 'nodeSet<std::__1::basic_string<char> > *')
            if (!this->isNul(node)) {
                             ^~~~
../map_tests/../../../map.tpp:233:13: note: in instantiation of member function 'ft::map<std::__1::basic_string<char>, std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<ft::pair<const std::__1::basic_string<char>, std::__1::basic_string<char> > > >::clear_tree' requested here
            clear_tree(this->_root);
            ^
../map_tests/../../../map.tpp:141:13: note: in instantiation of member function 'ft::map<std::__1::basic_string<char>, std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<ft::pair<const std::__1::basic_string<char>, std::__1::basic_string<char> > > >::clear' requested here
            clear();
            ^
../map_tests/__service.ipp:38:2: note: in instantiation of member function 'ft::map<std::__1::basic_string<char>, std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<ft::pair<const std::__1::basic_string<char>, std::__1::basic_string<char> > > >::~map' requested here
        MapBoolTest() {
        ^
../map_tests/../system/../../../red_black_tree.tpp:81:26: note: passing argument to parameter 'node' here
        bool isNul(Node* node) const {
                         ^
In file included from ../map_tests/count().cpp:1:
In file included from ../map_tests/../system/system_methods.ipp:2:
In file included from ../map_tests/../system/lib.hpp:28:
In file included from ../map_tests/../system/../../config.hpp:3:
../map_tests/../../../map.tpp:243:52: error: no matching member function for call to 'insertn'
            ft::pair<_node* , bool>  check = this->insertn(value, this->_root, this->_comp);
                                             ~~~~~~^~~~~~~
../map_tests/__service.ipp:39:40: note: in instantiation of member function 'ft::map<int, int, std::__1::less<int>, std::__1::allocator<ft::pair<const int, int> > >::insert' requested here
                m1.insert(std::make_pair(2, 3)); mp1.insert(ft::make_pair(2, 3));
                                                     ^
../map_tests/../system/../../../red_black_tree.tpp:205:31: note: candidate function template not viable: no known conversion from 'const ft::map<int, int, std::__1::less<int>, std::__1::allocator<ft::pair<const int, int> > >::value_type' (aka 'const pair<const int, int>') to 'const int' for 1st argument
        ft::pair<Node*, bool> insertn(const Key& value, Node* forward_root, Compare& comp ) {
                              ^
In file included from ../map_tests/count().cpp:1:
In file included from ../map_tests/../system/system_methods.ipp:2:
In file included from ../map_tests/../system/lib.hpp:28:
In file included from ../map_tests/../system/../../config.hpp:3:
../map_tests/../../../map.tpp:415:34: error: assigning to 'int *' from incompatible type 'std::__1::allocator<ft::pair<const int, int> >::pointer' (aka 'ft::pair<const int, int> *')
            build = this->_alloc.allocate(1);
                    ~~~~~~~~~~~~~^~~~~~~~~~~
../map_tests/../../../map.tpp:246:13: note: in instantiation of member function 'ft::map<int, int, std::__1::less<int>, std::__1::allocator<ft::pair<const int, int> > >::build' requested here
            build(value, check.first->_Key);
            ^
../map_tests/__service.ipp:39:40: note: in instantiation of member function 'ft::map<int, int, std::__1::less<int>, std::__1::allocator<ft::pair<const int, int> > >::insert' requested here
                m1.insert(std::make_pair(2, 3)); mp1.insert(ft::make_pair(2, 3));
                                                     ^
In file included from ../map_tests/count().cpp:1:
In file included from ../map_tests/../system/system_methods.ipp:2:
In file included from ../map_tests/../system/lib.hpp:28:
In file included from ../map_tests/../system/../../config.hpp:3:
../map_tests/../../../map.tpp:416:26: error: no matching member function for call to 'construct'
            this->_alloc.construct(build, value);
            ~~~~~~~~~~~~~^~~~~~~~~
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/memory:1895:9: note: candidate function template not viable: no known conversion from 'int *' to 'std::__1::allocator<ft::pair<const int, int> >::pointer' (aka 'ft::pair<const int, int> *') for 1st argument
        construct(pointer __p, _A0& __a0)
        ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/memory:1902:9: note: candidate function template not viable: no known conversion from 'int *' to 'std::__1::allocator<ft::pair<const int, int> >::pointer' (aka 'ft::pair<const int, int> *') for 1st argument
        construct(pointer __p, const _A0& __a0)
        ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/memory:1910:9: note: candidate function template not viable: requires 3 arguments, but 2 were provided
        construct(pointer __p, _A0& __a0, _A1& __a1)
        ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/memory:1917:9: note: candidate function template not viable: requires 3 arguments, but 2 were provided
        construct(pointer __p, const _A0& __a0, _A1& __a1)
        ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/memory:1924:9: note: candidate function template not viable: requires 3 arguments, but 2 were provided
        construct(pointer __p, _A0& __a0, const _A1& __a1)
        ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/memory:1931:9: note: candidate function template not viable: requires 3 arguments, but 2 were provided
        construct(pointer __p, const _A0& __a0, const _A1& __a1)
        ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/memory:1886:9: note: candidate function not viable: requires single argument '__p', but 2 arguments were provided
        construct(pointer __p)
        ^
In file included from ../map_tests/count().cpp:1:
In file included from ../map_tests/../system/system_methods.ipp:2:
In file included from ../map_tests/../system/lib.hpp:28:
In file included from ../map_tests/../system/../../config.hpp:3:
../map_tests/../../../map.tpp:243:52: error: no matching member function for call to 'insertn'
            ft::pair<_node* , bool>  check = this->insertn(value, this->_root, this->_comp);
                                             ~~~~~~^~~~~~~
../map_tests/__service.ipp:44:48: note: in instantiation of member function 'ft::map<std::__1::basic_string<char>, std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<ft::pair<const std::__1::basic_string<char>, std::__1::basic_string<char> > > >::insert' requested here
                m5.insert(std::make_pair("123", "123")); mp5.insert(ft::make_pair("123", "123"));
                                                             ^
../map_tests/../system/../../../red_black_tree.tpp:205:31: note: candidate function template not viable: no known conversion from 'const ft::map<std::__1::basic_string<char>, std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<ft::pair<const std::__1::basic_string<char>, std::__1::basic_string<char> > > >::value_type' (aka 'const pair<const std::__1::basic_string<char>, std::__1::basic_string<char> >') to 'const std::__1::basic_string<char>' for 1st argument
        ft::pair<Node*, bool> insertn(const Key& value, Node* forward_root, Compare& comp ) {
                              ^
In file included from ../map_tests/count().cpp:1:
In file included from ../map_tests/../system/system_methods.ipp:2:
In file included from ../map_tests/../system/lib.hpp:28:
In file included from ../map_tests/../system/../../config.hpp:3:
../map_tests/../../../map.tpp:415:34: error: assigning to 'std::__1::basic_string<char> *' from incompatible type 'std::__1::allocator<ft::pair<const std::__1::basic_string<char>, std::__1::basic_string<char> > >::pointer' (aka 'ft::pair<const std::__1::basic_string<char>, std::__1::basic_string<char> > *')
            build = this->_alloc.allocate(1);
                    ~~~~~~~~~~~~~^~~~~~~~~~~
../map_tests/../../../map.tpp:246:13: note: in instantiation of member function 'ft::map<std::__1::basic_string<char>, std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<ft::pair<const std::__1::basic_string<char>, std::__1::basic_string<char> > > >::build' requested here
            build(value, check.first->_Key);
            ^
../map_tests/__service.ipp:44:48: note: in instantiation of member function 'ft::map<std::__1::basic_string<char>, std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<ft::pair<const std::__1::basic_string<char>, std::__1::basic_string<char> > > >::insert' requested here
                m5.insert(std::make_pair("123", "123")); mp5.insert(ft::make_pair("123", "123"));
                                                             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
              ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
ors generated.
-limit=]
20 errors generated.
